--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: masamune_signin_google
 description: >-
   Plugin for signing in with a Google account.
-version: 0.1.0+1
+version: 0.3.0
 homepage: https://mathru.net
 repository: https://github.com/mathrunet/flutter_masamune_signin_google
 
@@ -17,8 +17,8 @@ dependencies:
   # Auth
   google_sign_in: ^4.2.0
   # Masamune
-  masamune_flutter: ^0.2.0
-  masamune_firebase: ^0.2.0
+  masamune_flutter: ^0.3.0
+  masamune_firebase: ^0.3.0
 
 dev_dependencies:
   flutter_test:
