バージョンアップ

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: masamune_signin_google
 description: >-
   Plugin for signing in with a Google account.
-version: 0.6.1
+version: 0.6.2
 homepage: https://mathru.net
 repository: https://github.com/mathrunet/flutter_masamune_signin_google
 
@@ -17,6 +17,7 @@ dependencies:
   # Auth
   google_sign_in: ^4.5.5
   # Masamune
+  masamune: ^0.6.0
   masamune_flutter: ^0.6.0
   masamune_firebase: ^0.6.0
 
